# crewAIInc-crewAI

./: .gitignore  sitemap.xml
core-concepts/Agents/: index.html
core-concepts/Collaboration/: index.html
core-concepts/Crews/: index.html
core-concepts/Processes/: index.html
core-concepts/Tasks/: index.html
core-concepts/Tools/: index.html
how-to/Creating-a-Crew-and-kick-it-off/: index.html
how-to/Customizing-Agents/: index.html
how-to/Hierarchical/: index.html
how-to/Human-Input-on-Execution/: index.html
how-to/LLM-Connections/: index.html
solarconnection/: README.md  pyproject.toml
solarconnection/src/solarconnection/: crew.py  crewai-run-solarconnection.sh  main.py
solarconnection/src/solarconnection/config/: agents.yaml  tasks.yaml
tedxsdg/: README.md  pyproject.toml
tedxsdg/src/tedxsdg/: README.md  __init__.py  crew.py  main.py
tedxsdg/src/tedxsdg/config/: agents.yaml  model.yaml  tasks.yaml  tools.yaml
tedxsdg/src/tedxsdg/crewai_manager/: __init__.py  agent_factory.py  config_loader.py  manager.py
tedxsdg/src/tedxsdg/manager/: __init__.py  agent_factory.py  manager.py
tedxsdg/src/tedxsdg/schemas/: __init__.py  config_schemas.py  duckduckgo_search_schema.py  sdg_align_schema.py  sustainability_impact_schema.py  tedx_search_schema.py  tedx_slug_schema.py  tedx_transcript_schema.py
tedxsdg/src/tedxsdg/tools/: __init__.py  config_loader.py  custom_tool.py  duckduckgo_search_tool.py  sdg_align_tool.py  sustainability_impact_tool.py  tedx_search_tool.py  tedx_slug_tool.py  tedx_transcript_tool.py  tool_registry.py  utils.py
(+2 files in other folders)
